--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
       <!-- self closing tag -->
       <!-- src is attribute -->
-      <img src="./img/serena.jpg" alt="Serena Williams">
-      <img src="./img/thedailyshow.jpg" alt="The Daily Show" width="100px">
+      <img src="./img/serena.jpg" alt="Serena Williams" width="300px">
+      <img src="./img/thedailyshow.jpg" alt="The Daily Show" width="300px">
       
 
   </body>
