made a css and imgs folder

--- a/index.html
+++ b/index.html
@@ -3,49 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Monday Exit Ticket</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Document</title>
 </head>
 <body>
-  <h1>My Awesome Table</h1>
-  <table>
-    <thead>
-    <tr>
-      <th>Table</th>
-      <th>Cost</th>
-      <th>Rating</th>
-      <th>Verdit</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><img src="imgs/AdjustablePortableStand.jpg" a href="https://www.amazon.com/Adjustable-Portable-Standing-Foldable-Breakfast/dp/B06XT7Y113/ref=sr_1_14_sspa?crid=3GUM8XR913XG1&dchild=1&keywords=high+table+for+laptop&qid=1598329942&refinements=p_72%3A1248915011&rnid=1248913011&s=home-garden&sprefix=high+table+for+%2Caps%2C224&sr=1-14-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFLU0NNUU9ZUVJENjMmZW5jcnlwdGVkSWQ9QTAwNTU2NTczNE84QjYyVjhSSjY0JmVuY3J5cHRlZEFkSWQ9QTAxMzAxMjAzSkM3SUtESDlLSVBKJndpZGdldE5hbWU9c3BfbXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" alt="AdjustableTableIMG"></td>
-      <td>$64.99</td>
-      <td>4.5 (⭐️⭐️⭐️⭐️.5) 8,396 rating</td>
-      <td>Highly Versatile, Easy to use, Light but sturdy</td>
-    </tr>
-
-    <tr>
-      <td><a href="https://www.amazon.com/Seville-Classics-Mobile-Laptop-Computer/dp/B07DLK9D9B/ref=sr_1_1?crid=3GUM8XR913XG1&dchild=1&keywords=high+table+for+laptop&qid=1598329933&refinements=p_72%3A1248915011&rnid=1248913011&s=home-garden&sprefix=high+table+for+%2Caps%2C224&sr=1-1"> <img src="imgs/MobileTable.jpg"  alt="MobileTableIMG"></td> </a>
-      <td>$40.76</td>
-      <td>4.5 (⭐️⭐️⭐️⭐️.5) 2,922 rating</td>
-      <td>Mobile Rolling Desk, Easy to Assemble, Heavy-duty steel Frame </td>
-    </tr>
-
-    <tr>
-      <td><a href="https://www.amazon.com/Foldable-Superjare-Breakfast-Portable-Lightweight/dp/B01JRY1ETA/ref=sr_1_50?crid=3GUM8XR913XG1&dchild=1&keywords=high+table+for+laptop&qid=1598338031&refinements=p_72%3A1248915011&rnid=1248913011&s=home-garden&sprefix=high+table+for+%2Caps%2C224&sr=1-50"> <img src="imgs/SuperPortableLightWeight.jpg"  alt="PortableLightWeightMG"></td> </a>
-      <td>$29.99</td>
-      <td>4.5 (⭐️⭐️⭐️⭐️.5) 2,021 rating</td>
-      <td>Easy to carry around, foldable, ligth-weight, an essential accessory for work or to enjoy a meal on. </td>
-    </tr>
-
-    <tr>
-      <td><a href="https://www.amazon.com/Ergonomic-Compatible-Notebook-Soundance-LS1/dp/B07D74DT3B/ref=sr_1_9?crid=3GUM8XR913XG1&dchild=1&keywords=high+table+for+laptop&qid=1598338363&refinements=p_72%3A1248915011&rnid=1248913011&s=home-garden&sprefix=high+table+for+%2Caps%2C224&sr=1-9"> <img src="imgs/CompatibleNotebook.jpg"  alt="AdjustableTableIMG"></td> </a>
-      <td>$26.80</td>
-      <td>4.5 (⭐️⭐️⭐️⭐️.5) 4,355 rating</td>
-      <td>Suits any Laptop, portable, ergonomic design, cooling and keeps desktop organized.</td>
-    </tr>
-
-  </tbody>
+  
 </body>
 </html>
