--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Carousel</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 </head>
 <body>
-  
+
+  <h2>Carousel</h2>
+
+  <div id="window">
+<div id="imgSlider">
+  <img src="imgs/homer.jpeg" alt="">
+  <img src="imgs/donut.png" alt="">
+  <img src="imgs/donut.png" alt="">
+  <img src="imgs/donut.png" alt="">
+  <img src="imgs/donut.png" alt="">
+  <img src="imgs/homer.jpeg" alt="">
+  <img src="imgs/donut.png" alt="">
+  <img src="imgs/donut.png" alt="">
+  <img src="imgs/donut.png" alt="">
+  <img src="imgs/donut.png" alt="">
+  <img src="imgs/homer.jpeg" alt="">
+
+</div>
+  </div>
+
+
+
+
+
+
+
+  <!-- <div class="card">
+    <h2><img src="imgs/donut.png" alt=""></h2>
+    
+  </div>
+  <div class="card">
+    <h2><img src="imgs/homer.jpeg" alt=""></h2>
+   
+  </div> -->
+
+
 </body>
 </html>
